--- a/DependencyInjections/src/ExampleOf_Depend_DependInject/step05_UseOfFactories/resourcesFile/applications.properties
+++ b/DependencyInjections/src/ExampleOf_Depend_DependInject/step05_UseOfFactories/resourcesFile/applications.properties
@@ -1,6 +1,6 @@
-StandartOutputRendererClass=ExampleOf_Depend_DependInject.step05.StandartOutputRenderer
-ErrorOutpurRendererClass=ExampleOf_Depend_DependInject.step05.ErrorOutputRenderer
+StandartOutputRendererClass=ExampleOf_Depend_DependInject.step05_UseOfFactories.StandartOutputRenderer
+ErrorOutpurRendererClass=ExampleOf_Depend_DependInject.step05_UseOfFactories.ErrorOutputRenderer
 
-HelloWorldGreetingProviderClass=ExampleOf_Depend_DependInject.step05.HelloWorldGreetingProvider
-HowIsItGoingProviderClass=ExampleOf_Depend_DependInject.step05.HowIsItGoingGreetingProvider
+HelloWorldGreetingProviderClass=ExampleOf_Depend_DependInject.step05_UseOfFactories.HelloWorldGreetingProvider
+HowIsItGoingProviderClass=ExampleOf_Depend_DependInject.step05_UseOfFactories.HowIsItGoingGreetingProvider
 
